--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <head>
-  <title> </title>
-  <style>
+  <title>GuineaGuide On Github</title>
+  <style> </style>
   
-  </style>
-</head>
-
+  </style> 
+</head> 
 <body>
-  
+  <marquee>This website is still under some construction, please wait as we roll out more pages and contents!</marquee>
+  <h1><u>GuineaGuide</u></h1>
+  <h2>The Hub for all the Chub</h2>
+  <hr>Welcome to GuineaGuide! this is a basic guide for anyone who is new to being a "Guinea Pig Parent", this guide has some of the best information
+  witten by an actual guinea pig owner! This guide website goes over <i>lots</i> of the basic guinea pig information, and clears up lots of common misconceptions
+  that may be had when owning a Guinea Pig.<br><br>My website is intended for Guinea Pigs ONLY, and if you have any questions about any other types of rodents.
+  this is not the place to be! <b>This is <i>specifically</i> a guinea pig website!</b>
+  <hr><h3>Pages:</h3>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <footer><marquee><mark>GuineaGuide - The Guinea Pig guide - github 2023-2023.</mark></marquee></footer>
 </body>
