--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   that may be had when owning a Guinea Pig.<br><br>My website is intended for Guinea Pigs ONLY, and if you have any questions about any other types of rodents.
   this is not the place to be! <b>This is <i>specifically</i> a guinea pig website!</b>
   <hr><h3>Pages:</h3>
-  <li></li>
+  <li><a href="https://guineapiggies.github.io/Guineaguide/pages/food-needs/">Food Needs</a></li>
   <li></li>
   <li></li>
   <li></li>
